2021-09-28  Oliver Kiddle  <opk@zsh.org>

	* ivan tkachenko: 49440: Doc/Zsh/expn.yo: Make double-flag
	parameter expansion syntax more discoverable in docs

	* ivan tkachenko: 49435: Doc/Zsh/expn.yo: Remove trailing whitespace

	* Alex Xu: 49444: Completion/Unix/Type/_tar_archive:
	libarchive tar can actually extract much more formats

	* Marlon Richert: 49423: Completion/Unix/Command/_gradle:
	Add support for multi-project builds

	* 49454: Completion/compdump: open dump file once only instead
	of reopening it for appends

	* 49450: Src/Zle/compcore.c: don't display explanation with
	compadd -x if any of -D, -A or -O are also used

2021-09-26  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Doc/Zsh/contrib.yo, Doc/Zsh/mod_curses.yo,
	Doc/Zsh/mod_zselect.yo, Test/A05execution.ztst,
	Test/C04funcdef.ztst: Fix typos

2021-09-22  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49422: Src/Modules/parameter.c, Src/hashnameddir.c, Src/options.c,
	Src/params.c, Src/utils.c: improve support of --disable-dynamic-nss

2021-09-09  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 49353: Src/exe.c, Test/A01grammar.ztst: In sourced file,
	always parse comments normally, ignoring INTERACTIVE_COMMENTS.

2021-09-08  Bart Schaefer  <schaefer@zsh.org>

	* 49391: Doc/Zsh/zle.yo: document default bracketed-paste bindings

	* 49389: Completion/Zsh/Command/_typeset: leading variables in
	autoload file completion

	* 49387: Src/Zle/zle_misc.c: suffix highlight with "compadd -R"

	* 49386: Test/Z03run-help.ztst: handle separate source/build trees

2021-09-08  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* unposted: Src/Modules/db_gdbm.c, Src/Modules/files.c,
	Src/Modules/nearcolor.c, Src/Zle/complete.c, Src/builtin.c:
	add/remove UNUSED() for some funtion parameters

	* unposted: Src/input.c: add 'static' to shinsavestack

	* 49377: Src/Zle/zle_keymap.c, Test/X03zlebindkey.ztst: fix
	segfault by 'bindkey -d' with reordered keymapnamtab
